--- a/index.html
+++ b/index.html
@@ -802,14 +802,14 @@
             </li>
             
 <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="www.globalshapermombasa.org/">
+              <a href="https://www.globalshapersmombasa.org/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/barber shop.jpg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/shapers.PNG" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Mombasa Hub Website</h3>
@@ -860,7 +860,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/barber shop.jpg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/RM.PNG" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">RM Electronics Shop Website</h3>
